Refactor DB/auth, add types & validators
Centralize MongoDB access and types: add lib/types.ts and a collections helper (lib/db/collections.ts) and migrate code to use collections.*() across pages and API routes. Replace old per-file validator exports with a consolidated schemas object (lib/validator.ts) and tighten marathon size limits. Update auth flow: JWT payload includes userId, introduce getAccessLevel, change code generation to numeric, adapt email code storage/verification, add session refresh handling in proxy, and set cookie domain. Remove legacy helpers/data: delete lib/data/marathons.ts and lib/rate-limiter.ts. UI/headers updates: components and server headers now use x-user-id and userId props. Add .env.example, expose MONGODB_NAME to CI, tweak .gitignore, and apply small formatting/cleanup across email client, utils, and other files.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
             RESEND_FROM="${{ secrets.RESEND_FROM }}"
             JWT_SECRET="${{ secrets.JWT_SECRET }}"
             NEXT_PUBLIC_ROOT_DOMAIN=${{ secrets.NEXT_PUBLIC_ROOT_DOMAIN }}
+            MONGODB_NAME=${{ secrets.MONGODB_NAME }}
             EOF
             
             npm install
